# talking-heads

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/talking_heads/: loss.py
src/talking_heads/architectures/: gano.py
src/talking_heads/demo/: fourier_interp.py  wind_2d.py  wind_temporal_2d.py
src/talking_heads/models/: base.py  coder.py  gano_kernel.py  ganokernel.py  gnn.py  kernel.py  neural_gp_kernel.py  onet_kernel.py
src/talking_heads/tests/: test_architectures.py  test_coders.py  test_gnn.py  test_losses.py
