[project]
authors = [{name = "lennoxc", email = "lennoxcrowe16@gmail.com"}]
dependencies = []
name = "talking-heads"
requires-python = ">=3.11,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.environments]
default = ["gpu"]
test = ["test"]

[tool.pixi.pypi-dependencies]
talking_heads = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.feature.gpu.system-requirements]
cuda = "12.9"

[tool.pixi.dependencies]
numpy = ">=2.4.3,<3"
matplotlib = ">=3.10.8,<4"
pytorch = ">=2.10.0,<3"
torch-geometric = ">=2.6.1,<3"
pytorch_cluster = ">=1.6.3,<2"

[tool.pixi.feature.test.dependencies]
pytorch-cpu = ">=2.10.0,<3"

[tool.pixi.feature.gpu.dependencies]
cuda-version = "12.9.*"
pytorch-gpu = ">=2.10.0,<3"
